--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,6 @@
 html {
-  font-family: Helvetica;
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 ul {
@@ -15,17 +16,43 @@ li {
 
 .select {
   font-family: Helvetica, sans-serif;
-  font-size: 12pt;
+  font-size: 20pt;
   line-height: 100%;
   font-weight: 500;
   text-align: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 0px;
+  margin-bottom: 5px;
 }
   
   body {
   font-family: Helvetica, sans-serif;
   color: #323232;
   margin: 0;
+}
+
+p {
+  font-family: Helvetica, sans-serif;
+  color: #323232;
+  margin: 0;
+  font-size: 20pt;
+  line-height: 100%;
+  font-weight: 500;
+  text-align: center;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
 }
 
