Changed Link Colors

--- a/style/main.css
+++ b/style/main.css
@@ -42,17 +42,21 @@ p {
 
 a:link {
     text-decoration: none;
+	color: #323232;
 }
 
 a:visited {
     text-decoration: none;
+	color: #323232;
 }
 
 a:hover {
     text-decoration: none;
+	color: #323232;
 }
 
 a:active {
     text-decoration: none;
+	color: #323232;
 }
 
