--- a/style/main.css
+++ b/style/main.css
@@ -30,6 +30,18 @@ li {
   margin: 0;
 }
 
+  .about {
+  display: none;
+}
+
+  .social {
+  display: none;
+}
+
+  .contact {
+  display: none;
+}
+
 p {
   font-family: Helvetica, sans-serif;
   color: #323232;
