--- a/style/main.css
+++ b/style/main.css
@@ -23,7 +23,6 @@ li {
   text-align: center;
   margin-top: 0px;
   margin-bottom: 5px;
-  cursor: pointer;
 }
   
   body {
@@ -32,22 +31,35 @@ li {
   margin: 0;
 }
 
-.home {
-	cursor: pointer;
-}
-
   .about {
   display: none;
-  cursor: pointer;
+
 }
 
   .social {
   display: none;
-  cursor: pointer;
+
 }
 
   .contact {
   display: none;
+
+}
+
+#home {
+	cursor: pointer;
+}
+
+#about {
+
+  cursor: pointer;
+}
+
+#social {
+  cursor: pointer;
+}
+
+#contact {
   cursor: pointer;
 }
 
