--- a/style/main.css
+++ b/style/main.css
@@ -66,7 +66,7 @@ li {
 p {
   font-family: Helvetica, sans-serif;
   color: #323232;
-  margin: 0;
+  margin: 10px;
   font-size: 20pt;
   line-height: 100%;
   font-weight: 500;
