--- a/style/main.css
+++ b/style/main.css
@@ -11,8 +11,8 @@ ul {
 li {
   float: left;
   width: auto;
-  margin: 15px;
- 
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .select {
@@ -23,73 +23,122 @@ li {
   text-align: center;
   margin-top: 0px;
   margin-bottom: 5px;
+  background-color: #bb0000;
+  color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
   
-  body {
+body {
   font-family: Helvetica, sans-serif;
   color: #323232;
   margin: 0;
 }
 
-  .about {
+.home {
+  margin-top: 100px;
+}
+
+.about {
+  margin-top: 100px;
+  display: none;
+}
+
+.about p {
+  text-align: justify;
+}
+
+.social {
+  margin-top: 100px;
   display: none;
 
 }
 
-  .social {
+.contact {
   display: none;
-
-}
-
-  .contact {
-  display: none;
-
 }
 
 #home {
 	cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+#home:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 #about {
-
+  transition: all .2s ease-in-out;
   cursor: pointer;
 }
+
+#about:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
 
 #social {
+  transition: all .2s ease-in-out;
   cursor: pointer;
 }
 
+#social:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+
 #contact {
+  transition: all .2s ease-in-out;
   cursor: pointer;
 }
+
+#contact:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+#content {
+  margin-top: 100px;
+}
+
 
 p {
   font-family: Helvetica, sans-serif;
   color: #323232;
-  margin: 10px;
   font-size: 20pt;
   line-height: 100%;
   font-weight: 500;
   text-align: center;
+  padding: 20px; 
 }
 
 a:link {
     text-decoration: none;
-	color: #323232;
+	 color: black;
 }
 
 a:visited {
     text-decoration: none;
-	color: #323232;
+	color: black;
 }
 
 a:hover {
     text-decoration: none;
-	color: #323232;
+	color: black;
 }
 
 a:active {
     text-decoration: none;
-	color: #323232;
+	color: black;
+}
+
+.img-circle {
+    border-radius: 50%;
+    width:300px; /* you can use % */
+    height: auto;
 }
 
