--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,18 @@
 html {
   font-family: Helvetica, Arial, sans-serif;
   text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 ul {
   display: inline-block;
   list-style-type: none;
+  float: center;
+  -webkit-padding-start: 0px;
 }
 
 li {
@@ -18,30 +25,31 @@ li {
 .select {
   font-family: Helvetica, sans-serif;
   font-size: 20pt;
-  line-height: 100%;
-  font-weight: 500;
   text-align: center;
-  margin-top: 0px;
-  margin-bottom: 5px;
-  background-color: #bb0000;
-  color: white;
+  margin: 0px;
+  background-color: white;
+  color: #bb0000;
   position: fixed;
   top: 0;
   width: 100%;
+  border-bottom: solid #E9E9E9 1px;
+}
+
+.select a {
+  color: white;
 }
   
 body {
   font-family: Helvetica, sans-serif;
   color: #323232;
-  margin: 0;
+  margin: 0px;
 }
 
 .home {
-  margin-top: 100px;
+  
 }
 
 .about {
-  margin-top: 100px;
   display: none;
 }
 
@@ -50,7 +58,7 @@ body {
 }
 
 .social {
-  margin-top: 100px;
+
   display: none;
 
 }
@@ -85,6 +93,11 @@ body {
   cursor: pointer;
 }
 
+.socialHeader a {
+  text-decoration: none;
+  color: white;
+}
+
 #social:hover {
   cursor: pointer;
   transform: scale(1.1);
@@ -101,44 +114,61 @@ body {
   transform: scale(1.1);
 }
 
-#content {
-  margin-top: 100px;
+div.content {
+  margin-top: 90px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  width: 100%;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  background-color: #bb0000;
 }
 
 
 p {
   font-family: Helvetica, sans-serif;
-  color: #323232;
+  color: white;
   font-size: 20pt;
   line-height: 100%;
   font-weight: 500;
   text-align: center;
-  padding: 20px; 
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 768px;
 }
 
-a:link {
+.social a:link {
     text-decoration: none;
 	 color: black;
 }
 
-a:visited {
+.social a:visited {
     text-decoration: none;
 	color: black;
 }
 
-a:hover {
+.social a:hover {
     text-decoration: none;
-	color: black;
+	color: white;
+
 }
 
-a:active {
+.social a:active {
     text-decoration: none;
 	color: black;
 }
 
 .img-circle {
     border-radius: 50%;
-    width:300px; /* you can use % */
+    width:40%; 
+    max-width: 400px;
     height: auto;
+}
+
+div.companies {
+  background-color: #666666;
 }
 
