--- a/style/main.css
+++ b/style/main.css
@@ -8,6 +8,21 @@ html {
   overflow-x: hidden; 
 }
 
+h2 {
+  font-size: 18pt;
+  line-height: 100%;
+  font-weight: 1000;
+  color: #bb0000;
+  text-align: justify;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 768px;
+  -webkit-margin-before: 0px;
+  -webkit-margin-after: 0px;
+  	
+}
+
 ul {
   display: inline-block;
   list-style-type: none;
@@ -110,6 +125,16 @@ body {
   transform: scale(1.1);
 }
 
+#skills {
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+}
+
+#skills:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
 #experience {
   transition: all .2s ease-in-out;
   cursor: pointer;
@@ -193,6 +218,7 @@ p {
     border-radius: 50%;
     width:40%; 
     max-width: 400px;
+    min-width: 200px;
     height: auto;
     padding-bottom: 10px;
 }
@@ -205,6 +231,11 @@ div.bio {
 
 div.companies {
   background-color: white;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+div.skills {
   padding-top: 30px;
   padding-bottom: 30px;
 }
