--- a/style/main.css
+++ b/style/main.css
@@ -39,6 +39,7 @@ li {
 }
 
 .select {
+
   font-family: Helvetica, sans-serif;
   font-size: 16pt;
   text-align: center;
@@ -71,9 +72,15 @@ body {
   padding-bottom: 20px
 }
 
+
 .about {
   background-color: #bb0000;
-  display: none;
+}
+
+@media (max-width: 450px) {
+  .about {
+    background-color: red;
+  }
 }
 
 .about p {
@@ -261,6 +268,18 @@ h1 {
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
   color: white;
+  padding-bottom: 10px;
+}
+
+.mobile {
+  text-align: left;
+  display: none;
+  color: #bb0000;
+  font-family: Helvetica, sans-serif;
+  font-size: 16pt;
+  font-weight: 200;
+  padding: 5px;
+  padding-top:10px;
   padding-bottom: 10px;
 }
 
