--- a/style/main.css
+++ b/style/main.css
@@ -190,7 +190,7 @@ p {
   font-family: Helvetica, sans-serif;
   color: white;
   font-size: 16pt;
-  line-height: 100%;
+  line-height: 22pt;
   font-weight: 200;
   text-align: justify;
   width: 80%;
