--- a/style/main.css
+++ b/style/main.css
@@ -282,6 +282,6 @@ h1 {
   padding-top:10px;
   padding-bottom: 10px;
   cursor: pointer;
-  text-decoration: none;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
