--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,5 @@
 html {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   text-align: center;
   width: 100%;
   height: 100%;
@@ -11,7 +11,6 @@ html {
 h2 {
   font-size: 18pt;
   line-height: 100%;
-  font-weight: 1000;
   color: #bb0000;
   text-align: justify;
   width: 80%;
@@ -40,14 +39,14 @@ li {
 
 .landing {
   height: 100vh;
-  background-image: url("file:///Users/o631468/project/class/austenmadden.github.io/img/Lake.jpg");
+  background-image: url("file:///Users/o631468/project/class/austenmadden.github.io/img/landing.jpg");
   background-repeat: no-repeat;
   background-position: center; 
   display: block;
 }
 
 .landing h1 {
-  margin-left: 250px;
+  margin-left: 30vw;
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
   color: white;
@@ -65,6 +64,7 @@ li {
   overflow: hidden;
   width: 100%;
   border-bottom: solid rgba(233, 233, 233, 1) 1px;
+  z-index: 2;
 }
 
 .selectStart {
@@ -106,8 +106,13 @@ body {
 }
 
 @media (max-width: 450px) {
-  .about {
-    background-color: red;
+
+  .social ul {
+    width: 100px;
+  }
+
+  .social li {
+    padding: 20px;
   }
 }
 
@@ -118,6 +123,7 @@ body {
 .social {
   background-color: white;
   padding-top: 30px;
+  z-index: 1;
 
 }
 
@@ -300,6 +306,19 @@ h1 {
   text-align: left;
   display: none;
   color: #bb0000;
+  font-size: 16pt;
+  font-weight: 200;
+  padding: 5px;
+  padding-top:10px;
+  padding-bottom: 10px;
+  cursor: pointer;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+}
+
+.mobileStart {
+  text-align: left;
+  display: none;
+  color: white;
   font-size: 16pt;
   font-weight: 200;
   padding: 5px;
