Added Padding to Landing Greeting

--- a/style/main.css
+++ b/style/main.css
@@ -47,6 +47,7 @@ li {
 
 .landing h1 {
   margin-left: 30vw;
+  padding-right:20px;
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
   color: white;
