--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ html {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
 
 h2 {
@@ -20,7 +20,7 @@ h2 {
   padding-bottom: 25px;
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
-  	
+
 }
 
 .company {
@@ -56,7 +56,7 @@ li {
   height: 100vh;
   background-image: url("http://austenmadden.github.io/img/landing.jpg");
   background-repeat: no-repeat;
-  background-position: center; 
+  background-position: center;
   display: block;
 }
 
@@ -154,7 +154,7 @@ li {
 #linkEnd {
   margin-right: 20vw;
 }
-  
+
 body {
   color: #323232;
   margin: 0px;
@@ -322,7 +322,7 @@ p {
 
 .img-circle {
     border-radius: 50%;
-    width:40%; 
+    width:40%;
     max-width: 400px;
     min-width: 200px;
     height: auto;
@@ -343,8 +343,16 @@ div.companies {
 }
 
 div.skills {
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
   background-color: #E8704E;
   padding-top: 30px;
+}
+
+div.skills h2 {
+  font-size: 22pt;
+  line-height: 100%;
+  text-align: justify;
+  width: 80%;
 }
 
 div.companies p {
@@ -352,6 +360,7 @@ div.companies p {
 }
 
 div.projects {
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
   background-color: #A37B85;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -359,6 +368,10 @@ div.projects {
 
 div.projects h2 {
   color: white;
+  font-size: 22pt;
+  line-height: 100%;
+  text-align: justify;
+  width: 80%;
 }
 
 div.companies h1 {
@@ -383,7 +396,7 @@ h1 {
   padding-top:10px;
   padding-bottom: 10px;
   cursor: pointer;
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
 
 .mobileStart {
@@ -396,5 +409,5 @@ h1 {
   padding-top:10px;
   padding-bottom: 10px;
   cursor: pointer;
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
