--- a/style/main.css
+++ b/style/main.css
@@ -61,8 +61,9 @@ li {
 }
 
 .landing h1 {
-  margin-left: 30vw;
-  padding-right:20px;
+  letter-spacing: 0.6px;
+  font-size: 3rem;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
   color: white;
@@ -410,4 +411,8 @@ h1 {
   padding-bottom: 10px;
   cursor: pointer;
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+}
+
+.shadow {
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
