--- a/style/main.css
+++ b/style/main.css
@@ -67,7 +67,20 @@ li {
   -webkit-margin-after: 0px;
   color: white;
   padding-bottom: 10px;
+}
+
+.landingScrollText {
   padding-top: 50vh;
+  position: fixed;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 100%;
+  z-index: 0;
+}
+
+.landingStaticText {
+  padding-top: 738px;
 }
 
 .jobTitle {
@@ -119,6 +132,7 @@ li {
 }
 
 .selectStart {
+  z-index: 2;
   font-size: 16pt;
   text-align: center;
   background-color: rgba(255, 255, 255, 0);
