Trying out a new style

--- a/style/main.css
+++ b/style/main.css
@@ -8,424 +8,19 @@ html {
   overflow-x: hidden;
 }
 
-h2 {
-  font-size: 18pt;
-  line-height: 100%;
-  color: #080808;
-  text-align: justify;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 768px;
-  padding-bottom: 25px;
-  -webkit-margin-before: 0px;
-  -webkit-margin-after: 0px;
+a {
+  
 }
 
-.company {
-  font-size: 22pt;
-  line-height: 100%;
-  color: #FF8300;
-  text-align: justify;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 768px;
-  padding-bottom: 10px;
-  -webkit-margin-before: 0px;
-  -webkit-margin-after: 0px;
-}
-
-ul {
-  display: inline-block;
-  list-style-type: none;
-  float: center;
-  -webkit-padding-start: 0px;
-}
-
-li {
-  float: left;
-  width: auto;
-  padding-left: 10px;
-  padding-right: 10px;
+.bio {
 
 }
 
-.landing {
-  height: 100vh;
-  background-image: url("http://austenmadden.github.io/img/landing.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  display: block;
+.unstyled {
+  list-style: none;
 }
 
-.landing h1 {
-  letter-spacing: 0.6px;
-  font-size: 3rem;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  -webkit-margin-before: 0px;
-  -webkit-margin-after: 0px;
-  color: white;
-  padding-bottom: 10px;
-}
-
-.landingScrollText {
-  padding-top: 50vh;
-  position: fixed;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: 100%;
-  z-index: 0;
-}
-
-.landingStaticText {
-  padding-top: 100vh;
-}
-
-.jobTitle {
-  font-size: 16pt;
-  line-height: 100%;
-  color: #080808;
-  text-align: justify;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 768px;
-  padding-bottom: 25px;
-  -webkit-margin-before: 0px;
-  -webkit-margin-after: 0px;
-}
-
-.select {
-  font-size: 16pt;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 1);
-  margin: 0px;
-  color: #080808;
-  position: fixed;
-  top: 0;
-  overflow: hidden;
-  width: 100%;
-  border-bottom: solid rgba(233, 233, 233, 1) 1px;
-  z-index: 2;
-}
-
-.select a:link {
-    text-decoration: none;
-   color: #080808;
-}
-
-.select a:visited {
-    text-decoration: none;
-  color: #080808;
-}
-
-.select a:hover {
-    text-decoration: none;
-  color:#080808;
-}
-
-.select a:active {
-    text-decoration: none;
-  color:#080808;
-}
-
-.selectStart {
-  z-index: 2;
-  font-size: 16pt;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0);
-  margin: 0px;
-  color: white;
-  position: fixed;
-  top: 0;
-  overflow: hidden;
-  width: 100%;
-  border-bottom: solid rgba(233, 233, 233, 0) 1px;
-}
-
-.selectStart a:link {
-    text-decoration: none;
-   color: white;
-}
-
-.selectStart a:visited {
-    text-decoration: none;
-  color: white;
-}
-
-.selectStart a:hover {
-    text-decoration: none;
-  color: white;
-}
-
-.selectStart a:active {
-    text-decoration: none;
-  color: white;
-}
-
-#linkEnd {
-  margin-right: 20vw;
-}
-
-body {
-  color: #323232;
-  margin: 0px;
-}
-
-.home {
-  padding-bottom: 20px
-}
-
-.social {
-  display: none;
-}
-
-.about {
-  background-color: #080808;
-}
-
-@media (max-width: 745px) {
-
-  .select li a {
-    display: none;
-  }
-
-  .selectStart li a {
-    display: none;
-  }
-
-  .social {
-    background-color: white;
-    display: block;
-  }
-}
-
-.about p {
-  text-align: justify;
-}
-
-.contact {
-  display: none;
-}
-
-#home {
-  cursor: pointer;
-  transition: all .2s ease-in-out;
-}
-
-#home:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-#about {
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-}
-
-#about:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-
-#social {
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-}
-
-#projects {
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-}
-
-#projects:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-#skills {
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-}
-
-#skills:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-#experience {
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-}
-
-#experience:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-.socialHeader a {
-  text-decoration: none;
-  color: white;
-}
-
-#social:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-
-#contact {
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-}
-
-#contact:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-div.content {
-  width: 100%;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  background-color: #080808;
-}
-
-
-p {
-  color: white;
-  font-size: 16pt;
-  line-height: 22pt;
-  font-weight: 200;
-  text-align: justify;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 768px;
-  -webkit-margin-before: 0px;
-  -webkit-margin-after: 0px;
-  padding-bottom: 25px;
-}
-
-
-.social a:link {
-    text-decoration: none;
-   color: #080808;
-}
-
-.social a:visited {
-    text-decoration: none;
-  color: #080808;
-}
-
-.social a:hover {
-    text-decoration: none;
-  color:#080808;
-
-}
-
-.social a:active {
-    text-decoration: none;
-  color:#080808;
-}
-
-.img-circle {
-    border-radius: 50%;
-    width:40%;
-    max-width: 400px;
-    min-width: 200px;
-    height: auto;
-    padding-bottom: 10px;
-}
-
-div.bio {
-  padding-top: 30px;
-  margin-top: 70px;
-  padding-bottom: 30px;
-  background-color: #080808;
-}
-
-div.companies {
-  background-color: white;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-div.skills {
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  background-color: #E8704E;
-  padding-top: 30px;
-}
-
-div.skills h2 {
-  font-size: 22pt;
-  line-height: 100%;
-  text-align: justify;
-  width: 80%;
-}
-
-div.companies p {
-  color: black;
-}
-
-div.projects {
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  background-color: #A37B85;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-div.projects h2 {
-  color: white;
-  font-size: 22pt;
-  line-height: 100%;
-  text-align: justify;
-  width: 80%;
-}
-
-div.companies h1 {
-  color: black;
-}
-
-h1 {
-  text-align: center;
-  -webkit-margin-before: 0px;
-  -webkit-margin-after: 0px;
-  color: white;
-  padding-bottom: 10px;
-}
-
-.mobile {
-  text-align: left;
-  display: none;
-  color: #080808;
-  font-size: 16pt;
-  font-weight: 200;
-  padding: 5px;
-  padding-top:10px;
-  padding-bottom: 10px;
-  cursor: pointer;
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
-}
-
-.mobileStart {
-  text-align: left;
-  display: none;
-  color: white;
-  font-size: 16pt;
-  font-weight: 200;
-  padding: 5px;
-  padding-top:10px;
-  padding-bottom: 10px;
-  cursor: pointer;
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
-}
-
-.shadow {
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+.inline li {
+  display: inline;
+  padding-right: 4%
 }
